update jhat